@@ -8,7 +8,7 @@
  * redistribution of this file, and for a DISCLAIMER OF ALL
  * WARRANTIES.
  * 
- * RCS: @(#) $Id: Interp.java,v 1.8 1999/08/09 08:52:36 mo Exp $
+ * RCS: @(#) $Id: Interp.java,v 1.9 1999/08/09 09:18:34 mo Exp $
  *
  */
 
@@ -53,17 +53,17 @@ long interpPtr;
 
 // Translates integer ID to ReflectObject.
 
-Hashtable reflectIDTable;
+Hashtable reflectIDTable = new Hashtable();
 
 // Translates Object to ReflectObject. This makes sure we have only
 // one ReflectObject internalRep for the same Object -- this
 // way Object identity can be done by string comparison.
 
-Hashtable reflectObjTable;
+Hashtable reflectObjTable = new Hashtable();
 
 // Counter used for reflect object id's
 
-long reflectObjCount;
+long reflectObjCount = 0;
 
 // The Notifier associated with this Interp.
 
