@@ -1,6 +1,6 @@
 Recent user-visible changes to Jacl & Tcl Blend:
 
-RCS: @(#) $Id: changes.txt,v 1.25 1999/08/09 08:52:36 mo Exp $
+RCS: @(#) $Id: changes.txt,v 1.26 1999/08/09 09:18:33 mo Exp $
 
 ----------------- Released 1.0a1, 10/22/97 -----------------------
 
@@ -931,4 +931,11 @@ Namespace test cases were also added.
 The java::import command was added to support "importing"
 a class name so that you do not need to type the fully
 qualified class name every time you refer to it. (Mo)
+
+8/9/99 (removed ugly init code in ReflectObject class)
+The ReflectObject class required an ugly hack to make
+it work in both Jacl and Tcl Blend once Jacl switched
+off automatic loading of the java package. This has
+been fixed by moving the reflect table init code into
+the interp class where it belongs. (Mo)
 
